tests/NormalTests/paczka1/fuzzy1/83628642.err
Error in line 16: A996 A443 58,7
Error in line 21: dJuZK0mXbfb S304 -3,4
Error in line 18: A996 A459 36,4
Error in line 29: W9lFDNgEb A996 90,2
Error in line 12: dJuZK0mXbfb S304 65,5
